[package]
name = "sshkt"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
anyhow = "1.0.32"
env_logger = "0.7.1"
log = "0.4.11"
argh = "0.1.3"
ssh2 = "0.8.2"
whoami = "0.9.0"
ring = "0.16.15"
rand = "0.7.3"
subprocess = "0.2.4"
tempfile = "3.1.0"
regex = "1.3.9"
